fix visibilidad mensaje no hay datos para el dashwere + minor styles resolved

--- a/src/app/tab2/formulario/formulario.component.scss
+++ b/src/app/tab2/formulario/formulario.component.scss
@@ -43,7 +43,7 @@
   background: #ffffff;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
-  padding: 20px;
+  padding: 10px 20px ;
   margin: 20px auto;
   width: 90%;
   max-width: 400px;
@@ -377,7 +377,7 @@ hint-scroll {
   border-left: 4px solid #3b82f6;
   padding: 12px;
   border-radius: 8px;
-  margin: 6px 0;
+  margin: 10px 0;
   position: relative;
   font-size: 14px;
   color: #1e293b;
