--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,3 +1,3 @@
 .spacer_header {
-    height: 10vh;
+    height: 1vh;
 }
